--- a/app/views/users/_school_form.html.erb
+++ b/app/views/users/_school_form.html.erb
@@ -18,15 +18,12 @@
   <% end %>
 
   <h3 class="sub-header">INCS Resume Bank for Hiring Managers</h3>
-  <h5>The INCS Resume Bank is a service provided by the Illinois Network of Charter Schools (INCS) to our member schools and non-member Illinois charter schools registered for the INCS Teacher & Administrator Job Fair. Through the INCS Resume Bank, you may access and search Job Seeker Profiles and resumes of hundreds of candidates for teaching, school leadership and other school positions, including job seekers registered for the 2019 INCS Teacher & Administrator Job Fair on April 6.</h5>
-
-  <h4 class="register-header">2019 INCS Job Fair School Registration Now Open!</h4>
-  <h4 class="register-header"><a target="_blank" href="https://events.eventzilla.net/e/incs-teacher--administrator-job-fair-2019-2138732584">Register Now!</a></h4>
+  <h5>The INCS Resume Bank is a service provided by the Illinois Network of Charter Schools (INCS) to our member schools and non-member Illinois charter schools registered for the annual INCS Teacher & Administrator Job Fair. Through the INCS Resume Bank, you may access and search Job Seeker Profiles and resumes of hundreds of candidates for teaching, school leadership and other school positions, including job seekers registered for the 2019 INCS Teacher & Administrator Job Fair, which took place on April 6, 2019.</h5>
 
   <h4 class="register-content-list">Access the INCS Resume Bank</h4>
   <ul class="register-content-list">
     <li><strong>New Users:</strong> INCS member schools may register below. Verification and approval of your account may take up to a week following registration. <strong>Only INCS member schools and other Illinois charters are able to register and, at the discretion of INCS, be granted access.</strong></li>
-    <li><strong>Returning users:</strong> please click here to <a href="/sessions/new">log in</a>.</li>
+    <li><strong>Returning users:</strong> please <a href="/sessions/new">log in here</a>.</li>
   </ul>
    <br>
   <%= f.hidden_field :access, value: "pending" %>
