--- a/app/views/welcome/live_index.html.erb
+++ b/app/views/welcome/live_index.html.erb
@@ -89,7 +89,7 @@ managers year-round.</li>
   </p>
 
   <p class="main-content grayed">
-    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for undeserved communities. Learn more about us <a target="_blank" href="https://www.incschools.org/">here</a>. 
+    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for underserved communities. Learn more about us <a target="_blank" href="https://www.incschools.org/">here</a>. 
   </p>
 
 
