--- a/app/views/user_mailer/teacher_both_email.html.erb
+++ b/app/views/user_mailer/teacher_both_email.html.erb
@@ -62,12 +62,12 @@
 
     <p>
     Best regards,<br><br>
-    Anne<br>
+    Allison<br>
 
-    Anne Levy Brown<br>
+    Allison Jack<br>
     Illinois Network of Charter Schools<br>
     Office (Wed. & Thurs.): (312) 690-2712<br>
-    alevybrown@incschools.org<br>
+    ajack@incschools.org<br>
     www.incschools.org<br>
     </p>
 
