Revert "Additional updates"

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       <% end %>
     </ul>
     <div class="banner">
-      <%= image_tag("mainbanner.png", width:"100%") %>
+      <%= image_tag("banner.jpg", width:"100%") %>
     </div>
     </nav>
     <% if session[:user_id] && User.find(session[:user_id]).access == "teacher" %>
