--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= "Error".pluralize(@user.errors.count)%>:</h2>
-      <h4>Please contact <a href="mailto:ajack@incschools.org?subject=Resume Bank Question">ajack@incschools.org</a> if you are having trouble completing the form.</h4>
+      <h4>Please contact <a href="mailto:alevybrown@incschools.org?subject=Resume Bank Question">alevybrown@incschools.org</a> if you are having trouble completing the form.</h4>
 
       <ul>
       <% @user.errors.messages.each do |message| %>
